# cgt-bandwidth-dynamics

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: api-stability.md  conformance-matrix.json  pipeline.md  porting.md  security.md  spec-format.md  theory-map.md
examples/: candidate_active_separation.json  comparability_lift.json  minimal_spec.json  profile_only_separation.json  release_cover.json  release_deletion_noncommutation.json  strict_minimal_spec.json
schemas/: audit-report.schema.json  closure-certificate.schema.json  completion-certificate.schema.json  component-law-certificate.schema.json  conformance-matrix.schema.json  evidence-audit.schema.json  executable-band-spec.schema.json  rech-certificate.schema.json  release-check.schema.json  release-descent-certificate.schema.json  strict-executable-band-spec.schema.json  support-certificate.schema.json  wellformedness-report.schema.json
scripts/: publication_audit.py
src/cgt_bandwidth/: __init__.py  bandwidth.py  cli.py  closure.py  completion.py  complexity.py  components.py  contracts.py  core.py  evidence.py  finite.py  io.py  microframe.py  orders.py  pipeline.py  rech.py  release.py  rows.py  spec.py  support.py
tests/: test_core_algorithms.py  test_full_conformance_readiness.py  test_microframe.py  test_support_release_complexity_cli.py  test_v010_conformance.py
