[project]
name = "cgt-bandwidth"
version = "0.1.0"
description = "Finite executable reference implementation of Constraint Bandwidth Dynamics in Constraint Generative Theory."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name = "K. Takahashi" }
]
keywords = [
  "constraint-generative-theory",
  "constraint-bandwidth",
  "finite-audit",
  "release-certificates",
  "effect-profiles"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = []

[project.optional-dependencies]
yaml = ["PyYAML>=6.0"]

[project.scripts]
cgt-bw = "cgt_bandwidth.cli:main"

[dependency-groups]
dev = [
  "hypothesis>=6.0",
  "jsonschema>=4.0",
  "mypy>=1.10",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6.0",
  "twine>=5.1"
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cgt_bandwidth"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
packages = ["cgt_bandwidth"]
ignore_missing_imports = true
warn_unused_ignores = true
show_error_codes = true
